@@ -4,7 +4,10 @@ Changelog for zest.releaser
 3.23 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Fixed opening the html long description in ``longtest`` on Mac OS X
+  Lion or python2.7 by using a ``file://`` url.
+  Fixes https://bugs.launchpad.net/zest.releaser/+bug/858011
+  [maurits]
 
 
 3.22 (2011-05-05)
